--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -45,3 +45,4 @@ note1=Once the final approver approves,FI document will be posted
 note2=Employees will receive Outlook notifications for every action taken by approvers until the final level approval completion
 Close=Close
 fileupld=File Upload
+desc=Claim Description
