--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -46,3 +46,4 @@ note2=Employees will receive Outlook notifications for every action taken by app
 Close=Close
 fileupld=File Upload
 desc=Description
+Taxcode=Tax Code
